--- a/app/globals.scss
+++ b/app/globals.scss
@@ -6,7 +6,8 @@
 $header-banner: url("/public/canvas_moodboard.png");
 $profile: url("/public/Profile.jpg");
 
-
+$primary: #72A0C1;
+$background: #e9eded;
 $secondary: rgb(238 242 255);
 $accent: rgb(113 98 225 / 19%);
 $neutral: #e0e6f7;
@@ -58,7 +59,7 @@ body {
     font-weight: 400;
     line-height: 1.6;
     color: $black;
-    background-color: $white;
+    background-color: $background;
     margin: 0;
     padding: 0;
     max-width: 100vw;
