--- a/app/globals.scss
+++ b/app/globals.scss
@@ -2,7 +2,6 @@
 
 /* Define CSS variables with the minutheme colors */
 
-
 $header-banner: url("/public/canvas_moodboard.png");
 $profile: url("/public/Profile.jpg");
 
@@ -59,7 +58,7 @@ body {
     font-weight: 400;
     line-height: 1.6;
     color: $black;
-    background-color: $background;
+    background-color: $white;
     margin: 0;
     padding: 0;
     max-width: 100vw;
