--- a/app/home/style.scss
+++ b/app/home/style.scss
@@ -13,6 +13,7 @@
             display: flex;
             flex-wrap: wrap;
             gap: 1rem;
+            margin-top: 1rem;
         }
      }
 
