--- a/components/SearchBar/style.scss
+++ b/components/SearchBar/style.scss
@@ -5,8 +5,7 @@
     grid-template-columns: 70% 25%;
     align-items: center;
     width: 100%;
-    height: 2rem;
-    margin-top: 1.5rem;
+    height: 2.5rem;
     gap: .75rem;
 
     @media screen and (max-width: 500px) {
@@ -17,7 +16,7 @@
         height: 100%;
         border: 1px solid $lightGray;
         border-radius: 0.5rem;
-        padding: 0.5rem;
+        padding: 5px 0.5rem;
         display: flex;
         align-items: center;
         gap: 0.5rem;
@@ -41,15 +40,16 @@
         }
 
         .search_icon{
-            width: 1.5rem;
-            height: 1.5rem;
+            width: 1.25rem;
+            height: 1.25rem;
             color: $gray;
         }
     }
 
     .search_button{
         width: 100%;
-        height: 3rem;
+        max-width: 8rem;
+        height: 2.5rem;
         background-color: $neutral;
         border-radius: 0.5rem;
         color: $black;
