--- a/components/Categories/style.scss
+++ b/components/Categories/style.scss
@@ -4,7 +4,7 @@
 
     .categories_list {
         display: flex;
-        flex-wrap: wrap;
+        // flex-wrap: wrap;
         gap: 0.5rem;
 
         .category {
