--- a/app/home/style.scss
+++ b/app/home/style.scss
@@ -1,20 +1,19 @@
-@import '../globals.scss';
-
+@import "../globals.scss";
 
 .main_container {
     width: 100%;
-    
+
     .body_container {
         border-top: 1px solid $neutral;
         padding: 1rem;
         margin-top: 2rem;
 
-        .body_nav{
-            display: flex;
-            flex-wrap: wrap;
+        .body_nav {
+            display: grid;
+            grid-template-columns: auto 1fr;
             gap: 1rem;
             margin-top: 1rem;
+            align-items: center;
         }
-     }
-
+    }
 }
