--- a/components/Categories/style.scss
+++ b/components/Categories/style.scss
@@ -4,11 +4,11 @@
 
     .categories_list {
         display: flex;
-        // flex-wrap: wrap;
         gap: 0.5rem;
 
         .category {
             width: fit-content;
+            min-width: fit-content;
             height: 100%;
             background-color: $secondary;
             border-radius: 0.5rem;
