--- a/app/home/style.scss
+++ b/app/home/style.scss
@@ -14,6 +14,13 @@
             gap: 1rem;
             margin-top: 1rem;
             align-items: center;
+            margin-bottom: 1rem;
+
+            @media screen and (max-width: 600px) {
+                display: flex;
+                flex-direction: column-reverse;
+                align-items: flex-start;
+            }
         }
     }
 }
