--- a/components/Products/style.scss
+++ b/components/Products/style.scss
@@ -1,5 +1,37 @@
 @import "../../app/globals.scss";
 
-.product_section{
-    margin-top: 1rem;
+.product_section {
+    margin-top: 2rem;
+
+    .product_list {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        gap: 1rem;
+        margin-top: 1rem;
+
+        .list {
+            width: 235px;
+            height: 235px;
+            border-radius: 10px;
+            background-color: $secondary;
+            position: relative;
+            z-index: 3;
+            content: "";
+            position: absolute;
+            border-radius: 8px;
+            background: linear-gradient(
+                180deg,
+                rgba(0, 0, 0, 5e-5) 30.66%,
+                rgba(0, 0, 0, 0.01953) 42.66%,
+                rgba(0, 0, 0, 0.5) 99.66%
+            );
+            
+            .product_image {
+                width: 100%;
+                height: 100%;
+                border-radius: 10px;
+                object-fit: cover;
+            }
+        }
+    }
 }
