--- a/components/SearchBar/style.scss
+++ b/components/SearchBar/style.scss
@@ -52,7 +52,7 @@
         height: 2.5rem;
         background-color: $neutral;
         border-radius: 0.5rem;
-        color: $black;
+        color: $gray;
         font-size: $font-sixteen;
         font-weight: 500;
         display: grid;
