--- a/app/globals.scss
+++ b/app/globals.scss
@@ -62,7 +62,7 @@ body {
     margin: 0;
     padding: 0;
     max-width: 100vw;
-    height: 100%;
+    height: 100vh;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
