--- a/components/Products/style.scss
+++ b/components/Products/style.scss
@@ -2,10 +2,13 @@
 
 .product_section {
     margin-top: 2rem;
+    margin-bottom: 2rem;
+    height: 100%;
 
     .product_list {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        // display: grid;
+        // grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        display: flex;
         gap: 1rem;
         margin-top: 1rem;
 
@@ -14,23 +17,36 @@
             height: 235px;
             border-radius: 10px;
             background-color: $secondary;
-            position: relative;
-            z-index: 3;
-            content: "";
-            position: absolute;
             border-radius: 8px;
-            background: linear-gradient(
-                180deg,
-                rgba(0, 0, 0, 5e-5) 30.66%,
-                rgba(0, 0, 0, 0.01953) 42.66%,
-                rgba(0, 0, 0, 0.5) 99.66%
-            );
+            display: flex;
+            align-items: flex-end;
+            flex-direction: column;
+            justify-content: flex-end;
+            padding: 0.5rem;
             
             .product_image {
                 width: 100%;
                 height: 100%;
                 border-radius: 10px;
                 object-fit: cover;
+            }
+
+            .category{
+                width: 100%;
+                line-height: 1;
+                color: $white;
+                font-size: $font-twelve;
+                font-weight: 500;
+                text-align: left;
+            }
+
+            .product_name{
+                width: 100%;
+                line-height: 1.2;
+                color: $white;
+                font-size: $font-eighteen;
+                font-weight: 600;
+                text-align: left;
             }
         }
     }
