--- a/components/Products/style.scss
+++ b/components/Products/style.scss
@@ -45,6 +45,7 @@
                 line-height: 1.2;
                 color: $white;
                 font-size: $font-eighteen;
+                text-transform: capitalize;
                 font-weight: 600;
                 text-align: left;
             }
