--- a/components/Categories/style.scss
+++ b/components/Categories/style.scss
@@ -31,6 +31,7 @@
                 font-size: $font-fourteen;
                 font-weight: 500;
                 color: $gray;
+                background: transparent;
             }
         }
     }
