--- a/components/Products/style.scss
+++ b/components/Products/style.scss
@@ -38,6 +38,7 @@
                 font-size: $font-twelve;
                 font-weight: 500;
                 text-align: left;
+                text-transform: capitalize;
             }
 
             .product_name{
