--- a/components/Spinner/style.scss
+++ b/components/Spinner/style.scss
@@ -3,7 +3,7 @@
     width: 30px;
     height: 30px;
     box-sizing: border-box;
-    border: 4px solid $backdrop;
+    border: 4px solid $primary;
     border-radius: 50%;
     animation: spinner-rotate 1s infinite linear;
     border-top-color: $accent;; 
