--- a/components/SearchBar/style.scss
+++ b/components/SearchBar/style.scss
@@ -1,9 +1,10 @@
 @import "../../app/globals.scss";
 
 .search_container{
-    display: grid;
-    grid-template-columns: 70% 25%;
-    align-items: center;
+    // display: grid;
+    // grid-template-columns: 70% 25%;
+    // align-items: center;
+    
     width: 100%;
     height: 2.5rem;
     gap: .75rem;
@@ -46,23 +47,23 @@
         }
     }
 
-    .search_button{
-        width: 100%;
-        max-width: 8rem;
-        height: 2.5rem;
-        background-color: $neutral;
-        border-radius: 0.5rem;
-        color: $gray;
-        font-size: $font-sixteen;
-        font-weight: 500;
-        display: grid;
-        place-items: center;
-        cursor: pointer;
-        margin-left: 0.5rem;
-        box-shadow: 0 2px 4px rgba(0,47,54,.2);
+    // .search_button{
+    //     width: 100%;
+    //     max-width: 8rem;
+    //     height: 2.5rem;
+    //     background-color: $neutral;
+    //     border-radius: 0.5rem;
+    //     color: $gray;
+    //     font-size: $font-sixteen;
+    //     font-weight: 500;
+    //     display: grid;
+    //     place-items: center;
+    //     cursor: pointer;
+    //     margin-left: 0.5rem;
+    //     box-shadow: 0 2px 4px rgba(0,47,54,.2);
 
-        @media screen and (max-width: 500px) {
-            display: none;
-        }
-    }
+    //     @media screen and (max-width: 500px) {
+    //         display: none;
+    //     }
+    // }
 }
