--- a/components/Categories/style.scss
+++ b/components/Categories/style.scss
@@ -39,12 +39,11 @@
            .category_button {
            color: $white;
            }
-
+           
            &:hover {
+            background-color: darken($primary, 20%);
             transform: scale(1.05);
-            background-color: $primary;
-            
-        }
+          } 
        }
     }
 }
