--- a/components/Footer/style.scss
+++ b/components/Footer/style.scss
@@ -8,12 +8,13 @@
     width: 100%;
 
     .footer__bottom {
+        width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
         padding: 1.5rem;
-        max-width: 1140px;
+        margin: 0 auto;
 
         .footer__right {
             width: 70%;
@@ -25,10 +26,6 @@
                 width: 50%;
                 justify-content: flex-start;
                 gap: 2rem;
-
-                .logo {
-                    display: none;
-                }
             }
 
             .logo {
