--- a/components/Products/style.scss
+++ b/components/Products/style.scss
@@ -6,14 +6,14 @@
     height: 100%;
 
     .product_list {
-        // display: grid;
-        // grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        display: flex;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        // display: flex;
         gap: 1rem;
         margin-top: 1rem;
 
         .list {
-            width: 235px;
+            // width: 235px;
             height: 235px;
             border-radius: 10px;
             background-color: $secondary;
@@ -23,6 +23,7 @@
             flex-direction: column;
             justify-content: flex-end;
             padding: 0.5rem;
+            cursor: pointer;
             
             .product_image {
                 width: 100%;
