--- a/components/Products/style.scss
+++ b/components/Products/style.scss
@@ -9,6 +9,7 @@
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
         gap: 1rem;
         margin-top: 1rem;
+        width: 100%;
 
         .list {
             height: 235px;
@@ -49,5 +50,13 @@
                 text-align: left;
             }
         }
+
+    }
+    .no_products{
+        text-align: center;
+        font-size: $font-sixteen;
+        font-weight: 500;
+        width: 100%;
+        margin-top: 3rem;
     }
 }
